--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "gulp": "^3.8.8",
-    "gulp-ng-annotate": "^1.1.0"
+    "gulp-if": "^2.0.1",
+    "gulp-ng-annotate": "^1.1.0",
+    "uglify": "^0.1.5"
   }
 }
